--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "compression": "^1.8.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1",
-    "serverless-http": "^3.2.0"
+    "mongoose": "^8.12.1"
   }
 }
